--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,24 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-nav [root]="rootPage" #content></ion-nav>
+<ion-menu type="overlay" side='left' [content]="content" id="m">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Menu</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+        <button ion-item>
+          Home
+        </button>
+        <button ion-item>
+          Friends
+        </button>
+        <button ion-item>
+          Events
+        </button>
+        <button ion-item menuToggle>
+          Close Menu
+        </button>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
