--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,27 @@
 page-home {
-
+    ion-grid{
+        height: 100%;
+        width: 100%;
+    }
+    ion-row{
+        width: 100%;
+        height: 33%;
+        margin-bottom:10px; 
+    }
+    ion-col{
+        height: 100%;
+        color: white;
+        text-align: center;
+        vertical-align: center;
+        font-size: 25px;
+        background-color: #1c4d28;
+        display: table;
+    }
+    .two{
+        margin-left: 10px !important;
+    }
+    h1{
+        display: table-cell;
+        vertical-align: middle;
+    }
 }
